--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-merlot
 title: Michael Kelberman Stats Capstone
+description: 40 Hz Light Stimulation for Treatment of Fear Generalization
