--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-merlot
+theme: jekyll-theme-tactile
 title: Michael Kelberman Stats Capstone
 description: 40 Hz Light Stimulation for Treatment of Fear Generalization
